# Intelligence_Control_System_Assistant_for_SHU

./: .env.example  .gitignore  README.md  chat.db
backend/: __init__.py  auth.py  chat.db  config.py  dependencies.py  main.py  model_1.py  model_person.py  models.py  pyproject.toml  requirements.txt  test_db.py  testdb.py
backend/models/: agent_id.py  chat_assisstant.py  db.py  message.py  session.py  user.py
backend/routers/: 1.py  agent_completions.py  agent_sessions.py  assistant_completions.py  assistant_sessions.py  auth.py  chat_sessions.py  completions.py  ragflow_wrapper.py  route_chat.py  route_com.py  session_manager.py  user_sessions.py
backend/tests/: test_auth.py  test_backend.py  test_session.py  test_userid2.py  text_userid.py
web/: package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/components/: ChatInterface.jsx  ChatInterface_1.jsx  LoginPage.jsx  RegisterPage.jsx
web/src/css/: LoginPage.css  RegisterPage.css
